// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display summary from 1 expense correctly 1`] = `
<div>
  Viewing 
  1
   
  expense
   totalling 
  $1,095.00
</div>
`;

exports[`should display summary from multiple expense correctly 1`] = `
<div>
  Viewing 
  3
   
  expenses
   totalling 
  $1,141.95
</div>
`;
